NFS-39: Fix major bugs reports in Code Review, FindBugs and PMD; added FindBugs and PMD natures to eclipse project
git-svn-id: https://source.sakaiproject.org/contrib/ufp/newsfeeds/trunk@53030 fdecad78-55fc-0310-b1b2-d7d25cf747c9